Fix analytics panel alignment on Safari

--- a/src/styles/components/elements/_analytics-panel.scss
+++ b/src/styles/components/elements/_analytics-panel.scss
@@ -4,7 +4,7 @@
 
   .analytics-panel-view {
     width: 100%;
-    align-self: end;
+    align-self: flex-end;
     z-index: 2;
     pointer-events: all;
     padding: 1rem 1.5rem 0;
